@@ -1,1 +1,2 @@
-noinst_HEADERS = tcp.h udp.h fork.h opentpl.h modbus.h serial.h bait.h ford.h tgdrive.h
+noinst_HEADERS = tcp.h udp.h fork.h opentpl.h modbus.h serial.h bait.h ford.h tgdrive.h \
+	conngpib.h conngpiblinux.h conngpibenet.h conngpibprologix.h conngpibserial.h
